--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "express": "~4.17.1",
     "express-session": "^1.17.0",
     "http-errors": "~1.7.3",
+    "http-proxy": "^1.18.0",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-auth0": "^1.2.1",
